# --
# Changes of OTRS 
# Copyright (C) 2002-2003 Martin Edenhofer <martin+code@otrs.org>
# --
# $Id: CHANGES,v 1.92 2003/09/16 08:10:04 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see 
# the enclosed file COPYING for license information (GPL). If you 
# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
# --
CVS HEAD
 - (2003/08/28) improved GenericAgent to use From, To, Cc, Subject and
    Body for ticket selection - example:
   [...]
   'delete all tickets with subject "VIRUS 32" in queue abc' => {
      # get all tickets with this properties  
      Queue => 'abc',
      Subject => '%VIRUS%',
      # new ticket properties
      New => {
        # DELETE!
        Delete => 1,
      },
   },
   [...]
 - (2003/07/31) added "Show closed Ticket/Don't show closed Ticket" link
    to customer panel show my tickets overview 
 - (2003/07/14) added last owner selection to Kernel/Modules/AgentOwner.pm
 - (2003/07/13) add "single sign on" (pre-authentication) option for 
    http-basic-auth (Kernel::System::Auth::HTTPBasicAuth and 
    Kernel::System::CustomerAuth::HTTPBasicAuth). Thanks to Phil Davis!
 - (2003/07/12) fixed bug 155 - in multiple page ticket view, start value 
    might be too high 
 - (2003/07/12) improved ticket search, added also search profile option
 - (2003/07/05) improved module permission options, now it's possible
    to add more the one group
 - (2003/06/26) improved ticket search and added new search preferences
    table (db update with scripts/DBUpdate-to-1.2.(mysql|postgres).sql) 
    required!
 - (2003/05/29) added utf-8 support for webfrontends (min. Perl 5.8.0 
    required)
 - (2003/05/20) added array for source queue selection to bin/GenericAgent.pl
    for example, use this job for more queues:
    [...]
    'move tickets from tricky to experts' => {
      # get all tickets with this properties  
      Queue => ['tricky', 'tricky1'],
      States => ['new', 'open'],