@@ -2,7 +2,7 @@
 # AdminResponseForm.dtl - provides HTML form for AdminResponse
 # Copyright (C) 2001-2003 Martin Edenhofer <martin+code@otrs.org>
 # --
-# $Id: AdminResponseForm.dtl,v 1.11 2003/03/23 21:42:14 martin Exp $
+# $Id: AdminResponseForm.dtl,v 1.12 2003/09/28 13:33:50 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -85,6 +85,23 @@
   <p>
   $Text{"Attention"}: <a href="$Env{"CGIHandle"}?Action=AdminQueueResponses">$Text{"Don't forget to add a new response a queue!"}</a>
   </p>
+  <hr>
+  <p>
+  $Text{"Useable options"}:
+    <table>
+     <tr>
+      <td><b>&lt;OTRS_TICKET_STATE&gt;</b></td>
+      <td>$Text{"Next state"}</td>
+     </tr>
+    </table>
+   </p>
+    <p>
+    $Text{"Example"}:
+    <pre>
+$Text{"The current ticket state is"}: "&lt;OTRS_TICKET_STATE&gt;"
+    </pre>
+    </p>
+
   </td>
 </tr>
 </table>
